{
    "name": "GameInputSystem",
    "maps": [
        {
            "name": "PlayerInputMap",
            "id": "cc97c774-7762-4c43-a946-af22c6f8259e",
            "actions": [
                {
                    "name": "PlayerRotationCameraMouse",
                    "type": "Value",
                    "id": "bf45f039-0db5-4292-9071-0273bb3cbb22",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PlayerInteractionKeyboard",
                    "type": "Button",
                    "id": "9818309a-8ad3-4a0b-b8b9-7046e9026aa2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerStartMagicCastKeyboard",
                    "type": "Button",
                    "id": "80f97ba2-96c8-4c97-8f98-b0b2e88637d2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerOpenInventoryKeyboard",
                    "type": "Button",
                    "id": "e6a7e063-9e36-4713-bec2-f507e2a89d4b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e0864427-04d0-44fd-9d34-cffea7b4a8b6",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerRotationCameraMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33dcaf0f-4a62-40e2-969b-346c8cbe02cb",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerInteractionKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb7dbb22-4c4c-439d-bb74-715f90f2ef16",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerStartMagicCastKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "914aa6b0-6d73-4d69-907a-78dc37e454b2",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerOpenInventoryKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerInventoryMap",
            "id": "ff90f855-bc4d-42b0-b31d-159a6fd76c37",
            "actions": [
                {
                    "name": "PlayerCloseInventoryKeyboard",
                    "type": "Button",
                    "id": "b336ae09-b330-497c-b645-7cb19b4f1587",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "db4d7cab-ae6c-4f67-9ea2-a85105729a22",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerCloseInventoryKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerMovementInput",
            "id": "f1156adf-7650-4fec-acaf-39efea375df2",
            "actions": [
                {
                    "name": "PlayerMovementKeyboard",
                    "type": "Value",
                    "id": "4ba964f2-f77b-4921-a1a4-30a50032bdb8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PlayerJumpKeyboard",
                    "type": "Button",
                    "id": "eae9deac-f36c-4cf4-b2c8-a624917f10de",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerSprintingKeyboard",
                    "type": "Button",
                    "id": "6b29d027-b702-4a51-a30a-bd2e3b838189",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerCrouchKeyboard",
                    "type": "Button",
                    "id": "c7aa9017-a548-4355-b610-decf71d6e220",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "1f136b1c-63b2-4db1-b1be-4c7e957b55c2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovementKeyboard",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4ee1d7da-5077-4fe3-9156-38737683d453",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovementKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d7caaa80-aa30-40c0-a0a4-11809873ab23",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovementKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "57467ab6-918e-436f-a82d-fa773abd1a7a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovementKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "40d4b145-dfdc-499b-af20-f0140faa3c4c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovementKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6457b257-a462-44cc-8aa9-ba3f6fe24847",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerJumpKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cff5072a-5674-4153-b42c-336320a89966",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerSprintingKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "353e2b76-5f02-4d47-8ac8-27e366cf7e07",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerCrouchKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerMagicCastInput",
            "id": "ad83f7b9-51c1-460c-88bb-8a7c5e1c010e",
            "actions": [
                {
                    "name": "PlayerMagicCastFireKeyboard",
                    "type": "Button",
                    "id": "76851b41-db5e-484b-a913-69c06a70fcc6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerMagicCastWaterKeyboard",
                    "type": "Button",
                    "id": "10481ad8-adcc-4079-9c2d-243d7937d71b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerMagicCastEarthKeyboard",
                    "type": "Button",
                    "id": "df5cd987-3281-4b56-9319-1892ff46392c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerMagicCastElectricKeyboard",
                    "type": "Button",
                    "id": "eb6d4e91-4536-4f04-b336-f92a1f7a514e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerMagicCastAirKeyboard",
                    "type": "Button",
                    "id": "a05213dc-026e-4a99-ae67-e51ba6da1d2a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerMagicCastFrostKeyboard",
                    "type": "Button",
                    "id": "d92c8dec-3ba3-4239-ba5e-e254bc339724",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerMagicCastLightKeyboard",
                    "type": "Button",
                    "id": "21715a45-9cb0-481d-90ed-05c39b2920c9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerMagicCastDarkKeyboard",
                    "type": "Button",
                    "id": "c62dd6d2-d588-48dc-b4a9-15ada6b50278",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerMagicCastMagicKeyboard",
                    "type": "Button",
                    "id": "edd28862-d14e-4022-9553-1c8872d4b14e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b3db7cce-0552-45b2-96fc-75eae5372c1a",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMagicCastFireKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "57337cb8-e051-423d-a826-762787e62d95",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMagicCastWaterKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db54d557-9cf4-4aed-8f18-ac60b425dbad",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMagicCastEarthKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c173a8c8-9694-4729-b9d9-416843951730",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMagicCastElectricKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4e912ce-a0f7-4d7e-b4f7-fd4b9e12c5b4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMagicCastAirKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c07c4c5-ab71-4037-96eb-151120337153",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMagicCastFrostKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c476ab9-f083-402a-b0a1-b9f2aafc5446",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMagicCastLightKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c92226e-137f-456d-8280-ef5bb343d80a",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMagicCastDarkKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "782baa46-6771-4c1b-8ce4-cdadebba2bc0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMagicCastMagicKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}